BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Sales_Transaction_vod__c.object
<CustomObject>
    <description>Sales Transaction object is used to define the columns and types of fields stored within the VoD database. This object should not be modified by Customers.</description>
    <fields>
        <fullName>B100_vod__c</fullName>
        <description>The Bucket fields correspond to sales data. B1 is the most recent and B104 is the oldest. The number of buckets that are leveraged and metadata from the Analytics File record determines the units of the data stored, the data date that corresponds to B1, and whether it is weekly or monthly data buckets.</description>
        <label>B100</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>B101_vod__c</fullName>
        <description>The Bucket fields correspond to sales data. B1 is the most recent and B104 is the oldest. The number of buckets that are leveraged and metadata from the Analytics File record determines the units of the data stored, the data date that corresponds to B1, and whether it is weekly or monthly data buckets.</description>
        <label>B101</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>B102_vod__c</fullName>
        <description>The Bucket fields correspond to sales data. B1 is the most recent and B104 is the oldest. The number of buckets that are leveraged and metadata from the Analytics File record determines the units of the data stored, the data date that corresponds to B1, and whether it is weekly or monthly data buckets.</description>
        <label>B102</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Brick_vod__c</fullName>
        <description>The Brick field stores the lowest granular level of the Brick hierarchy to which the Sales Data record corresponds.</description>
        <label>Brick</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_ID_vod__c</fullName>
        <description>Field indicating the identifiers of any child accounts, as defined by the uploaded ID mapping file.</description>
        <label>Child ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Channel_vod__c</fullName>
        <description>Data Channel is the textual name that maps to the Name field of Analytics Data Channel. This determines the Channel of delivery (Mail Order, Retail, etc.) that corresponds to the Sales Transaction record.</description>
        <label>Data Channel</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_vod__c</fullName>
        <description>The ID field is utilized to link Sales Transaction records to the Account via the ID_vod__c field on both objects.</description>
        <label>ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_vod__c</fullName>
        <description>The associated Market of the Sales Data Transaction.</description>
        <label>Market</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payer_Id_vod__c</fullName>
        <description>Payer Id for Formulary for the Rep</description>
        <label>Payer Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payer_Plan_vod__c</fullName>
        <description>The textual representation of the Payer Plan for a Sales Transaction record.  Used with files such as Plantrak.</description>
        <label>Payer Plan</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group_vod__c</fullName>
        <description>Product Group is the textual name that maps to the Name field of Analytics Product Group Map.  This determines the Product Group that corresponds to the Sales Transaction record.</description>
        <label>Product_Group</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Name_vod__c</fullName>
        <description>Records inserted with the Territory_Name_vod defined indicate aggregated levels of data in the case that a Customer is defining the aggregation of Territory level data for Rollups.</description>
        <label>Territory Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_vod__c</fullName>
        <description>The Type field corresponds to the Data Template that is leveraged when loading the data file.  This provides information about the data contained within the Sales Transaction record, such as units, # of columns, etc.</description>
        <label>Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_vod__c</fullName>
        <description>The Zip code is leveraged to store the Zip Code where the Sales Transaction took place.</description>
        <label>Zip</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <label>Sales Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type_vod__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Sales Transaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>